# ffluce

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.md  README.md
assets/: README.md
docs/: 2025_12_10_FFLUCE_Overview.md
licenses/: FFMPEG-LGPL-2.1.txt  JUCE-AGPL-3.0.txt
scripts/: build.ps1  build.sh  configure.ps1  configure.sh  ffmpeg_fetch.ps1  ffmpeg_fetch.sh
src/audio/: BinauralAudioSource.h  FilePlayerAudioSource.h  NoiseAudioSource.cpp  NoiseAudioSource.h
src/core/: Main.cpp  MainComponent.cpp  MainComponent.h  ProcessManager.h  RenderDialog.h
src/rendering/: AudioRenderer.cpp  AudioRenderer.h  CMakeLists.txt  ClipProcessor.cpp  ClipProcessor.h  FFmpegExecutor.cpp  FFmpegExecutor.h  OverlayProcessor.cpp  OverlayProcessor.h  RenderManager.cpp  RenderManager.h  RenderManagerCore.cpp  RenderManagerCore.h  RenderTypes.h  TimelineAssembler.cpp  TimelineAssembler.h
src/streaming/: StreamingDebugLogger.h  YoutubeStreamer.cpp  YoutubeStreamer.h
src/ui/components/: AudioTrackComponent.h  BinauralTrackComponent.cpp  BinauralTrackComponent.h  FileTrackComponent.cpp  FileTrackComponent.h  NoiseTrackComponent.cpp  NoiseTrackComponent.h
src/ui/panels/: AudioPanel.h  VideoPanel.cpp  VideoPanel.h  VideoPreviewComponent.cpp  VideoPreviewComponent.h
src/ui/resources/: ImageResources.h
src/utils/: RenderImpl.cpp  RenderManager.h
